# allocator

./: .gitignore  CMakeLists.txt
example/stdlib_allocator/: stdlib_allocator_example.c
include/julian_pfaul/: allocator.h
source/: allocator.c
